--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -6,7 +6,7 @@
 	--clr-neutral-900: hsl(0 0% 0%);
 	--clr-neutral-100: hsl(0 0% 100%);
 	
-	--fs-xl: clamp(3rem, 1rem + 10vw, 7rem);
+	--fs-xl: clamp(3rem, 1rem + 10vw, 10rem);
 	--fs-600: 2rem;
 	--fs-500: 1.5rem;
 	--fs-400: 1.125rem;
@@ -40,5 +40,7 @@ h1, .lead, blockquote {
 
 h1 {
 	font-size: var(--ff-xl);
-	
+	line-height: 1;
+	text-transform: uppercase;
+	font-weight: 900;
 }
