--- a/Styles/article.css
+++ b/Styles/article.css
@@ -25,7 +25,7 @@ body, h1, h2, h3, p, blockquote {
 	color: var(--clr-neutral-100);
 }
 
-a, blockquote, .point { 
+a, blockquote, .point, h1 { 
 	color: var(--clr-primary-400);
 }
 
@@ -94,7 +94,7 @@ article > *:not(img) {
 	float: left;
 	font-weight: 750;
 	padding: 0.05em;
-	background-color: var(--clr-primary-400);
+	color: var(--clr-primary-400);
 	margin-right: 0.05em;
 }
 
@@ -104,7 +104,7 @@ article > *:not(img) {
 	font-weight: 750;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 60em) {
 	article {
 		grid-template-columns: min(40%, 40rem) 1fr;
 	}
