Slight update to second layer of navigation

--- a/Prototypes/YNAB/style.css
+++ b/Prototypes/YNAB/style.css
@@ -99,6 +99,16 @@ body {
     line-height: 1.1;
 }
 
+.budget-summary {
+    text-transform: uppercase;
+
+}
+
+.amount {
+    float: right;
+}
+
+
 .content {
     background: var(--clr-primary-900);
     flex: 2;
